feat: JWT, Security, SwaggerConfig, EntityMapper